# nomad-schema-plugin-nmr

./: .cruft.json  404.html  MANIFEST.in  README.md  README.md.rej  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.rej  requirements_docs.txt
.devcontainer/: devcontainer.json
.github/workflows/: actions.yml
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomad_nmr_schema/: README.md  move_template_files.sh
nomad_nmr_schema/docs/: index.md
nomad_nmr_schema/tests/apps/: test_app.py
nomad_nmr_schema/tests/data/: test.archive.yaml
reference/: references.html
search/: search_index.json
src/nomad_nmr_schema/apps/: __init__.py
src/nomad_nmr_schema/schema_packages/: __init__.py  schema_package.py  tensor_utils.py
tests/apps/: test_app.py
tests/data/: test.archive.yaml  test_delta_g.archive.yaml  test_delta_g_paratec.archive.yaml  test_electric_field_gradient.archive.yaml  test_hyperfine_dipolar.archive.yaml  test_hyperfine_fermi_contact.archive.yaml  test_indirect_spin_spin_coupling.archive.yaml  test_indirect_spin_spin_coupling_fermicontact.archive.yaml  test_indirect_spin_spin_coupling_orbitald.archive.yaml  test_indirect_spin_spin_coupling_orbitalp.archive.yaml  test_indirect_spin_spin_coupling_spindipolar.archive.yaml  test_magnetic_shielding.archive.yaml  test_magnetic_susceptibility.archive.yaml  test_unpaired_spins.archive.yaml
tests/schema_packages/: expected_values.py  sample_magres_data.py  test_schema_package.py  test_tensor_utils.py
tutorial/: tutorial.html
